# swatch

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
ci/: install.sh  test.sh
ext/gtest/: CMakeLists.txt
ext/uhal/: CMakeLists.txt
include/: Dummy.h
include/board/: Board.h
include/core/: Device.h  Link.h  Port.h  exception.h
src/: Dummy.cpp
src/board/: Board.cpp  BoardFactory.cpp
src/core/: Device.cpp  Link.cpp  Port.cpp  exception.cpp
test/: DeviceTest.cpp  DummyTest.cpp
